[package]
name = "buynow-cross-contract"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = "1.2.7"
cosmwasm-storage = "1.2.7"
cw-storage-plus = "1.1.0"
cw2 = "1.1.0"
schemars = "0.8.12"
serde = { version = "1.0.166", features = ["derive"], default-features = false }
thiserror = "1.0.40"

[dev-dependencies]
cosmwasm-schema = "1.2.7"
cw-multi-test = "0.13.2"
